Fixed a spacing issue and transition issue

--- a/components/project-card/project-card.module.css
+++ b/components/project-card/project-card.module.css
@@ -1,8 +1,8 @@
 .cardWrapper {
   --height: 210px;
   --width: 330px;
-  --n: calc(210px - 50px);
-  --translate: calc(var(--n) * -1);
+  --initial: calc(210px - 55px);
+  --translate: calc(var(--initial) * -1);
   height: var(--height);
   width: var(--width);
   overflow: hidden;
@@ -17,7 +17,7 @@
 
 .cardContent {
   position: absolute;
-  top: calc(var(--height) - 50px);
+  top: var(--initial);
   background-color: var(--card-content-background);
   z-index: 30;
   padding: 2px 10px;
@@ -34,10 +34,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .description {
   margin-top: 0px;
+  margin-bottom: 10px;
 }
 
 .showContent {
